--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Level_Empty.Level_Empty
 EditorStartupMap=/Game/Maps/Level_Empty.Level_Empty
+GlobalDefaultGameMode=/Game/Blueprints/Game/BP_TheIslandGameMode.BP_TheIslandGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
